# OC_P10_SoftDesk

./: .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
users/: models.py  serializers.py  views.py
users/migrations/: 0001_initial.py
